--- a/resume/info.md.example
+++ b/resume/info.md.example
@@ -10,12 +10,12 @@ My salary expectation is....
 ...
 ...
 
-# JOB EXPERIENCE
-Microsoft (2018-2020)
+# JOB EXPERIENCE (use •  for separate between sub sections)
+• Microsoft (2018-2020)
 ...
 ...
 ...
-Google (2012-2018)
+• Google (2012-2018)
 ...
 ...
 ...
