--- a/resume/info.md.example
+++ b/resume/info.md.example
@@ -5,7 +5,7 @@ Hi I am
 ...
 ...
 
-# PREFERENCES
+# JOB PREFERENCES
 My salary expectation is....
 ...
 ...
@@ -33,7 +33,7 @@ Bachelor Degree...
 ...
 ...
 
-# CERTIFICATIONS AND COURSES
+# CERTIFICATIONS
 Google Data Science Bootcamp
 ...
 ...
